// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Claims Updater Claims Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "claim_transaction_id": "1234123412341234",
      "claim_value": "7",
      "id": "1234123412341234",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "output_transaction_id": "1234123412341234",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "2345234523452345",
      "claim_value": "2",
      "id": "2345234523452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "2345234523452345",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "3",
      "id": "3456345634563456",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "output_transaction_id": "3456345634563456",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "4",
      "id": "4567456745674567",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "4567456745674567",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Claims Updater Claims Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "claim_transaction_id": "1234123412341234",
      "claim_value": "7",
      "id": "1234123412341234",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "output_transaction_id": "1234123412341234",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "2345234523452345",
      "claim_value": "2",
      "id": "2345234523452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "2345234523452345",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "3",
      "id": "3456345634563456",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "output_transaction_id": "3456345634563456",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "4",
      "id": "4567456745674567",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "4567456745674567",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Claims Updater Claims Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "claim_transaction_id": "1234123412341234",
      "claim_value": "7",
      "id": "1234123412341234",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "output_transaction_id": "1234123412341234",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "2345234523452345",
      "claim_value": "2",
      "id": "2345234523452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "2345234523452345",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "3",
      "id": "3456345634563456",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "output_transaction_id": "3456345634563456",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "4",
      "id": "4567456745674567",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "4567456745674567",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Claims Updater Claims Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "claim_transaction_id": "1234123412341234",
      "claim_value": "7",
      "id": "1234123412341234",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "output_transaction_id": "1234123412341234",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "2345234523452345",
      "claim_value": "2",
      "id": "2345234523452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "2345234523452345",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "claim_transaction_id": "3456345634563456",
      "claim_value": "3",
      "id": "3456345634563456",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "output_transaction_id": "3456345634563456",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "4567456745674567",
      "claim_value": "4",
      "id": "4567456745674567",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "4567456745674567",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Claims Updater Claims Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "claim_transaction_id": "1234123412341234",
      "claim_value": "7",
      "id": "1234123412341234",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf169bdc30c9d81694e045c",
      "output_transaction_id": "1234123412341234",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "claim_transaction_id": "2345234523452345",
      "claim_value": "2",
      "id": "2345234523452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdfv904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "2345234523452345",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "3",
      "id": "3456345634563456",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904ea17a0bdc30c4201694e045c",
      "output_transaction_id": "3456345634563456",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "4",
      "id": "4567456745674567",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e69c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "4567456745674567",
      "output_transaction_index": 1,
      "subtype": "CLAIM",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;
